--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier . --check",
     "format:write": "prettier . --write",
-    "design-lint": "design-lint lint \"tokens/**/*.dtif.json\" --config design-lint.config.cjs",
+    "design-lint": "design-lint lint \"src/**/*.{css,js,jsx,ts,tsx}\" --config design-lint.config.cjs",
     "dtif:validate": "dtifx build validate --config build/dtif-build.config.mjs",
     "dtif:build": "dtifx build generate --config build/dtif-build.config.mjs",
     "dtif:diff": "dtifx diff compare ops/artifacts/diff/baseline.dtif.json tokens/index.dtif.json --format json --output ops/artifacts/diff/report.json && dtifx diff compare ops/artifacts/diff/baseline.dtif.json tokens/index.dtif.json --format markdown --output ops/artifacts/diff/report.md",
     "dtif:audit": "node scripts/run-dtif-audit.mjs",
     "verify": "npm run lint && npm run design-lint"
+  },
+  "dependencies": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@dtifx/audit": "2.0.0",
