Use dtifx CLI reporters for audit script

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dtif:validate": "dtifx build validate --config build/dtif-build.config.mjs",
     "dtif:build": "dtifx build generate --config build/dtif-build.config.mjs",
     "dtif:diff": "dtifx diff compare ops/artifacts/diff/baseline.dtif.json tokens/index.dtif.json --format json --output ops/artifacts/diff/report.json && dtifx diff compare ops/artifacts/diff/baseline.dtif.json tokens/index.dtif.json --format markdown --output ops/artifacts/diff/report.md",
-    "dtif:audit": "node scripts/run-dtif-audit.mjs",
+    "dtif:audit": "dtifx audit run --config audit/dtif-audit.config.mjs --reporter json --reporter markdown --out-dir ops/artifacts/audit",
     "verify": "npm run lint && npm run design-lint"
   },
   "dependencies": {
